# AUEB-lecture-ts-docker-fastAPI

./: .dockerignore  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
notebooks/: m4_nixtla.ipynb
setup/: Dockerfile  Dockerfile_Dev  Dockerfile_pip  conda_env.yml
src/: app.py  main.py
src/m4_forecasting/: __init__.py  config.py  data.py  trainer.py  utils.py
