[project]
name = "AUEB-ts-docker-fastAPI"
version = "0.1.0"
description = "Repo to demonstrate how to move from notebooks to a proper repo structure."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasetsforecast>=1.0.0",
    "fastapi>=0.109.0",
    "ipykernel>=7.1.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "mlforecast>=1.0.2",
    "numba>=0.62.1",
    "numpy>=2.2.6",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pydantic>=2.6.0",
    "scikit-learn>=1.7.2",
    "statsforecast>=2.0.2",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.27.0",
    "window-ops>=0.0.15",
]

[dependency-groups]
dev = [
    "pipreqs>=0.5.0",
    "isort>=7.0.0",
    "jupyterlab>=4.5.0",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab-rise>=0.43.1",
    "black>=25.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/m4_forecasting"]
